--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="reset.css" />
-    <link rel="stylesheet" href="styles1.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- <link rel="stylesheet" href="reset.css" /> -->
+    <link rel="stylesheet" href="styles1.css" /> 
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap");
     </style>
@@ -12,17 +17,47 @@
   </head>
   <body>
     <div class="header">
-      <h1>Hi, I'm Tatiana!</h1>
+      <h1 class="display-1">Hi, I'm Tatiana!</h1>
     </div>
-    <div class="topnav">
-      <a href="#aboutMeContainer">About me</a>
-      <a href="#workExperience">Work experience</a>
-      <a href="#education">Education</a>
-      <a href="files/CV_TATIANA_MAZZEO.pdf">Curriculum Vitae</a>
-    </div>
+
+    <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Menu</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#aboutMeContainer">About me</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#workExperience">Work experience</a>
+            </li>
+            <li class="nav-item"></li>
+              <a class="nav-link" href="#education">Education</a>
+            </li>
+            <li class="nav-item"></li>
+              <a class="nav-link" href="files/CV_TATIANA_MAZZEO.pdf">Curriculum Vitae</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
     <section>
       <h2>About Me</h2>
-      <div id="aboutMeContainer">
         <p>
           My 3+ years of experience providing service to clients in diverse
           environments, both in Spanish and English, have equipped me with
@@ -33,66 +68,61 @@
           environments.
         </p>
         <img id="tatiana" src="img/tatiana.jpg" />
-      </div>
     </section>
     <section>
-      <h2 id="workExperience">Work experience</h2>
-      <p>Project Manager</p>
-      <ul>
-        <li>
+      <h2>Work experience</h2>
+      <h3>Project Manager</h3>
+      <p>
           Punto de contacto entre la empresa y los clientes a las que les
           brindamos nuestra solución, asegurando la comunicación efectiva y la
           satisfacción del cliente.
-        </li>
-        <li>
+        </p>
+        <p>
           Gestión, monitoreo y planificación de operaciones a cargo mediante la
           comunicación con otros departamentos de la empresa, asegurando la
           satisfacción de las necesidades y requerimientos planteados por el
           cliente.
-        </li>
-        <li>
+        </p>
+        <p>
           Identificación y resolución de problemas planteados por los clientes.
-        </li>
-      </ul>
-      <p>Receptionist</p>
-      <ul>
-        <li>
+        </p>
+      <h3>Receptionist</h3>
+      <p></p>
           Welcoming and checking in guests: Greeting arrivals warmly, verifying
           reservations, and assigning rooms.
-        </li>
-        <li>
+        </p>
+        <p>
           Checking out guests: Processing payments, verifying accounts, and
           handling departures efficiently.
-        </li>
-        <li>
+        </p>
+        <p>
           Resolving guest complaints: Addressing issues promptly and
           professionally to maintain guest satisfaction.
-        </li>
-      </ul>
-      <p>Sales promoter</p>
-      <ul>
-        <li>
+        </p>
+      <h3>Sales promoter</h3>
+
+        <p>
           Customer Interaction: Engaging with customers, answering questions,
           and building rapport.
-        </li>
-        <li>
+        </p>
+        <p>
           Merchandising: Setting up and maintaining attractive product displays.
-        </li>
-      </ul>
-      <p>Costumer service representative</p>
-      <ul>
-        <li>
+        </p>
+
+      <h3>Costumer service representative</h3>
+
+        <p>
           Cargo de atención al cliente en inglés. Encargada de realizar,
           modificar y cancelar reservaciones para la cadena de hoteles Wyndham a
           través del teléfono.
-        </li>
-      </ul>
+        </p>
+ 
     </section>
     <section>
-      <h2 id="education">Education</h2>
-      <p>English Teacher</p>
-      <p>Jovenes A Programar</p>
-      <p>First Certificate In English</p>
+      <h2>Education</h2>
+      <h3>English Teacher</h3>
+      <h3>Jovenes A Programar</h3>
+      <h3>First Certificate In English</h3>
     </section>
     <footer>
       <p>
@@ -104,5 +134,15 @@
         >
       </p>
     </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
