a lot of changes

--- a/index.html
+++ b/index.html
@@ -1,64 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- <link rel="stylesheet" href="reset.css" /> -->
-    <link rel="stylesheet" href="styles1.css" /> 
-    <!-- Bootstrap CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <style>
-      @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap");
-    </style>
-    <title>Tatiana Mazzeo</title>
-  </head>
-  <body>
-    <div class="header">
-      <h1 class="display-1">Hi, I'm Tatiana!</h1>
-    </div>
 
-    <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Menu</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#aboutMeContainer">About me</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#workExperience">Work experience</a>
-            </li>
-            <li class="nav-item"></li>
-              <a class="nav-link" href="#education">Education</a>
-            </li>
-            <li class="nav-item"></li>
-              <a class="nav-link" href="files/CV_TATIANA_MAZZEO.pdf">Curriculum Vitae</a>
-            </li>
-          </ul>
-        </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <!-- <link rel="stylesheet" href="reset.css" /> -->
+  <link rel="stylesheet" href="styles1.css" />
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+
+  <title>Tatiana Mazzeo</title>
+</head>
+
+
+<div class="header">
+  <h1 class="display-1" id="title">Hi, I'm Tatiana!</h1>
+</div>
+
+<body>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#aboutMeContainer">About me</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#workExperience">Work experience</a>
+          </li>
+          <li class="nav-item"></li>
+          <a class="nav-link" href="#education">Education</a>
+          </li>
+          <li class="nav-item"></li>
+          <a class="nav-link" href="files/CV_TATIANA_MAZZEO.pdf">Curriculum Vitae</a>
+          </li>
+        </ul>
       </div>
-    </nav>
-
-    <section>
-      <h2>About Me</h2>
-        <p>
+    </div>
+  </nav>
+  <div class="container">
+    <div class="container">
+      <h2 class="display-2">About Me</h2>
+      <div class="row">
+        <div class="col-md-6 column">
           My 3+ years of experience providing service to clients in diverse
           environments, both in Spanish and English, have equipped me with
           exceptional communication skills, both verbal and written, and the
@@ -66,83 +59,116 @@
           proactive person with a strong commitment to ethics and
           responsibility, who is always willing to learn and adapt to new
           environments.
-        </p>
-        <img id="tatiana" src="img/tatiana.jpg" />
-    </section>
-    <section>
-      <h2>Work experience</h2>
-      <h3>Project Manager</h3>
-      <p>
-          Punto de contacto entre la empresa y los clientes a las que les
-          brindamos nuestra solución, asegurando la comunicación efectiva y la
-          satisfacción del cliente.
-        </p>
-        <p>
-          Gestión, monitoreo y planificación de operaciones a cargo mediante la
-          comunicación con otros departamentos de la empresa, asegurando la
-          satisfacción de las necesidades y requerimientos planteados por el
-          cliente.
-        </p>
-        <p>
-          Identificación y resolución de problemas planteados por los clientes.
-        </p>
-      <h3>Receptionist</h3>
-      <p></p>
-          Welcoming and checking in guests: Greeting arrivals warmly, verifying
-          reservations, and assigning rooms.
-        </p>
-        <p>
-          Checking out guests: Processing payments, verifying accounts, and
-          handling departures efficiently.
-        </p>
-        <p>
-          Resolving guest complaints: Addressing issues promptly and
-          professionally to maintain guest satisfaction.
-        </p>
-      <h3>Sales promoter</h3>
+        </div>
+        <div class="col-md-6 column">
+          <img class="img-fluid img-responsive" src="img/tatiana.jpg" />
+        </div>
+      </div>
+    </div>
+    <hr>
+    <div class="container">
+      <h2 class="display-2">Work experience</h2>
+      <h3>Project Manager - Puesto actual</h3>
+      Punto de contacto entre la empresa y los clientes a las que les brindamos nuestra solución, asegurando la
+      comunicación efectiva y la satisfacción del cliente.
+      <br>
+      Gestión, monitoreo y planificación de operaciones a cargo mediante la
+      comunicación con otros departamentos de la empresa, asegurando la
+      satisfacción de las necesidades y requerimientos planteados por el
+      cliente.
+      <br>
+      Identificación y resolución de problemas planteados por los clientes.
+    </div>
+    <br>
+    <div class="container">
+      <div class="card-group">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Recepcionist</h5>
+            <p class="card-text"> Welcoming and checking in guests: Greeting arrivals warmly, verifying
+              reservations, and assigning rooms. <br>
+              Checking out guests: Processing payments, verifying accounts, and
+              handling departures efficiently.<br>
+              Resolving guest complaints: Addressing issues promptly and
+              professionally to maintain guest satisfaction.</p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Sales promoter</h5>
+            <p class="card-text"> Customer Interaction: Engaging with customers, answering questions, and building
+              rapport. <br>
+              Merchandising: Setting up and maintaining attractive product displays.</p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Costumer service representative</h5>
+            <p class="card-text">Cargo de atención al cliente en inglés. <br> Encargada de realizar, modificar y
+              cancelar
+              reservaciones para la
+              cadena
+              de hoteles Wyndham a través del teléfono.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <br>
+    <hr>
+    <div class="container">
+      <h2 class="display-2">Education</h2>
+      <div class="card-group">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">English Teacher</h5>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+              incididunt
+              ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+              ut
+              aliquip ex ea commodo consequat.</p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Jovenes a Programar</h5>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+              incididunt
+              ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+              ut
+              aliquip ex ea commodo consequat.</p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">First Certificate
+            </h5>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+              incididunt
+              ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+              ut
+              aliquip ex ea commodo consequat.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
+  <br><br><br><br>
+  <footer>
+    <div class="text-center text-dark p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+      <img id="email" src="img/gmail.png" />
+      <a href="mailto:mazzeotatiana6@gmail.com">mazzeotatiana6@gmail.com</a>
+      <img id="linkedin" src="img/linkedin.png" />
+      <a href="https://www.linkedin.com/in/tatiana-mazzeo-880595237/">Tatiana Mazzeo</a>
+    </div>
+  </footer>
 
-        <p>
-          Customer Interaction: Engaging with customers, answering questions,
-          and building rapport.
-        </p>
-        <p>
-          Merchandising: Setting up and maintaining attractive product displays.
-        </p>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+    integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+    crossorigin="anonymous"></script>
+</body>
 
-      <h3>Costumer service representative</h3>
-
-        <p>
-          Cargo de atención al cliente en inglés. Encargada de realizar,
-          modificar y cancelar reservaciones para la cadena de hoteles Wyndham a
-          través del teléfono.
-        </p>
- 
-    </section>
-    <section>
-      <h2>Education</h2>
-      <h3>English Teacher</h3>
-      <h3>Jovenes A Programar</h3>
-      <h3>First Certificate In English</h3>
-    </section>
-    <footer>
-      <p>
-        <img src="img/gmail.png" />
-        <a href="mailto:mazzeotatiana6@gmail.com">mazzeotatiana6@gmail.com</a>
-        <img src="img/linkedin.png" />
-        <a href="https://www.linkedin.com/in/tatiana-mazzeo-880595237/"
-          >Tatiana Mazzeo</a
-        >
-      </p>
-    </footer>
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-      crossorigin="anonymous"
-    ></script>
-  </body>
 </html>
