--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
           <li class="nav-item"></li>
           <a class="nav-link" href="#education">Education</a>
           </li>
+          <li class="nav-item"></li>
+          <a class="nav-link" href="/contact.html">Contact</a>
+          </li>
         </ul>
       </div>
     </div>
