--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <a class="nav-link" href="#education">Education</a>
           </li>
           <li class="nav-item"></li>
-          <a class="nav-link" href="/contact.html">Contact</a>
+          <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </ul>
       </div>
