--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Allan:wght@400;700&display=swap');
     </style>
     <script src="/script.js"></script>
+    <script src="https://unpkg.com/just-validate@latest/dist/just-validate.production.min.js"></script>
 </head>
 
 <body>
@@ -32,7 +33,7 @@
                 <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link" aria-current="page" href="/index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/index.html">About me</a>
@@ -62,10 +63,10 @@
                         required autocomplete="on">
 
                     <label for="correo" class="form-label">Email*</label>
-                    <input type="text" class="form-control" id="correo" name="correo" placeholder="name@example.com"
+                    <input type="email" class="form-control" id="correo" name="correo" placeholder="name@example.com"
                         required autocomplete="on">
 
-                    <label for="number" class="form-label">Number</label>
+                    <label for="number" class="form-label">Number*</label>
                     <input type="number" class="form-control" id="number" name="number" placeholder="0800"
                         autocomplete="on">
 
@@ -76,6 +77,16 @@
                     <input type="submit" value="Submit" class="btn btn-primary" id="submit">
                 </div>
             </form>
+        </div>
+        <br>
+        <footer>
+            <div class="text-center text-dark p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+                <img id="email" src="img/gmail.png" />
+                <a id="pie" href="mailto:mazzeotatiana6@gmail.com">mazzeotatiana6@gmail.com</a>
+                <img id="linkedin" src="img/linkedin.png" />
+                <a id="pie" href="https://www.linkedin.com/in/tatiana-mazzeo-880595237/">Tatiana Mazzeo</a>
+            </div>
+        </footer>
     </body>
 
 </html>
