--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Allan:wght@400;700&display=swap');
     </style>
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
     <script src="https://unpkg.com/just-validate@latest/dist/just-validate.production.min.js"></script>
 </head>
 
