--- a/contact.html
+++ b/contact.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact form</title>
     <!-- <link rel="stylesheet" href="reset.css" /> -->
-    <link rel="stylesheet" href="/css/styles1.css" />
+    <link rel="stylesheet" href="css/styles1.css" />
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Allan:wght@400;700&display=swap');
     </style>
-    <script src="/js/script.js"></script>
+    <script src="js/script.js"></script>
     <script src="https://unpkg.com/just-validate@latest/dist/just-validate.production.min.js"></script>
 </head>
 
