--- a/index.html
+++ b/index.html
@@ -1,119 +1,136 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Tatiana Mazzeo</title>
+    <link rel="stylesheet" href="css/styles1.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Allan:wght@400;700&display=swap");
+    </style>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <!-- <link rel="stylesheet" href="reset.css" /> -->
-  <link rel="stylesheet" href="css/styles1.css" />
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Allan:wght@400;700&display=swap');
-  </style>
-  <title>Tatiana Mazzeo</title>
-</head>
+  <div class="header">
+    <h1 class="display-1" id="title">Hi, I'm Tatiana!</h1>
+  </div>
 
-
-<div class="header">
-  <h1 class="display-1" id="title">Hi, I'm Tatiana!</h1>
-</div>
-
-<body>
-  <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#aboutMe">About me</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#workExperience">Work experience</a>
-          </li>
-          <li class="nav-item"></li>
-          <a class="nav-link" href="#education">Education</a>
-          </li>
-          <li class="nav-item"></li>
-          <a class="nav-link" href="contact.html">Contact</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-  <br>
-  <div class="container">
-    <div class="container" id="aboutMe">
-      <h2 class="display-2">About Me</h2>
-      <div class="row">
-        <div class="col-md-6 column">
-          My 3+ years of experience providing service to clients in diverse
-          environments, both in Spanish and English, have equipped me with
-          exceptional communication skills, both verbal and written, and the
-          ability to solve problems quickly and efficiently. I am an organized,
-          proactive person with a strong commitment to ethics and
-          responsibility, who is always willing to learn and adapt to new
-          environments.
+  <body>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"> </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          class="collapse navbar-collapse justify-content-center"
+          id="navbarNav"
+        >
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="/index.html"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#aboutMe">About me</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#workExperience">Work experience</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#education">Education</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/contact.html">Contact</a>
+            </li>
+          </ul>
         </div>
-        <div class="col-md-6 column">
-          <img class="img-fluid img-responsive" src="img/tatiana.jpg" />
+      </div>
+    </nav>
+    <br />
+    <div class="container">
+      <div class="container" id="aboutMe">
+        <h2 class="display-2">About Me</h2>
+        <div class="row">
+          <div class="col-md-6 column">
+            My 3+ years of experience providing service to clients in diverse
+            environments, both in Spanish and English, have equipped me with
+            exceptional communication skills, both verbal and written, and the
+            ability to solve problems quickly and efficiently. I am an
+            organized, proactive person with a strong commitment to ethics and
+            responsibility, who is always willing to learn and adapt to new
+            environments.
+          </div>
+          <div class="col-md-6 column">
+            <img class="img-fluid img-responsive" src="img/tatiana.jpg" />
+          </div>
         </div>
       </div>
     </div>
     <div class="container">
       <h2 class="display-2" id="workExperience">Work experience</h2>
       <h3>Project Manager - Puesto actual</h3>
-      Point of contact between the company and the customers to whom we provide our solution, ensuring effective
-      communication and customer satisfaction.
-      <br>
-      Management, monitoring and planning of operations in charge through communication with other departments of the
-      company, ensuring the satisfaction of the needs and requirements raised by the client.
-      <br>
+      Point of contact between the company and the customers to whom we provide
+      our solution, ensuring effective communication and customer satisfaction.
+      <br />
+      Management, monitoring and planning of operations in charge through
+      communication with other departments of the company, ensuring the
+      satisfaction of the needs and requirements raised by the client.
+      <br />
       Identification and resolution of problems raised by customers.
     </div>
-    <br>
+    <br />
     <div class="container">
       <div class="card-group">
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">Recepcionist</h5>
-            <p class="card-text"> Welcoming and checking in guests: Greeting arrivals warmly, verifying
-              reservations, and assigning rooms. <br>
+            <p class="card-text">
+              Welcoming and checking in guests: Greeting arrivals warmly,
+              verifying reservations, and assigning rooms. <br />
               Checking out guests: Processing payments, verifying accounts, and
-              handling departures efficiently.<br>
+              handling departures efficiently.<br />
               Resolving guest complaints: Addressing issues promptly and
-              professionally to maintain guest satisfaction.</p>
+              professionally to maintain guest satisfaction.
+            </p>
           </div>
         </div>
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">Sales promoter</h5>
-            <p class="card-text"> Customer Interaction: Engaging with customers, answering questions, and building
-              rapport. <br>
-              Merchandising: Setting up and maintaining attractive product displays.</p>
+            <p class="card-text">
+              Customer Interaction: Engaging with customers, answering
+              questions, and building rapport. <br />
+              Merchandising: Setting up and maintaining attractive product
+              displays.
+            </p>
           </div>
         </div>
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">Costumer service representative</h5>
-            <p class="card-text">Cargo de atención al cliente en inglés. <br> Encargada de realizar, modificar y
-              cancelar
-              reservaciones para la
-              cadena
-              de hoteles Wyndham a través del teléfono.</p>
+            <p class="card-text">
+              Cargo de atención al cliente en inglés. <br />
+              Encargada de realizar, modificar y cancelar reservaciones para la
+              cadena de hoteles Wyndham a través del teléfono.
+            </p>
           </div>
         </div>
       </div>
     </div>
-    <br>
+    <br />
     <div class="container">
       <h2 class="display-2" id="education">Education</h2>
       <div class="card-group">
@@ -121,12 +138,14 @@
           <div class="card-body">
             <h5 class="card-title">English Teacher</h5>
             <p class="card-text">
-              Teaching English language and culture to students of various ages and levels.
-              <br>
-              Developing and implementing engaging lesson plans to foster language acquisition and cultural
-              understanding.
-              <br>
-              Collaborating with colleagues to create a positive and supportive learning environment.
+              Teaching English language and culture to students of various ages
+              and levels.
+              <br />
+              Developing and implementing engaging lesson plans to foster
+              language acquisition and cultural understanding.
+              <br />
+              Collaborating with colleagues to create a positive and supportive
+              learning environment.
             </p>
           </div>
         </div>
@@ -134,46 +153,53 @@
           <div class="card-body">
             <h5 class="card-title">Jovenes a Programar</h5>
             <p class="card-text">
-              HTML: web page structure and content creation.<br>
-              CSS: styling web elements, applying layouts, and creating visually appealing
-              interfaces.<br>
-              JavaScript: scripting dynamic web interactions, handling user input, and building
-              interactive components.
+              HTML: web page structure and content creation.<br />
+              CSS: styling web elements, applying layouts, and creating visually
+              appealing interfaces.<br />
+              JavaScript: scripting dynamic web interactions, handling user
+              input, and building interactive components.
             </p>
           </div>
         </div>
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title">First Certificate
-            </h5>
+            <h5 class="card-title">First Certificate</h5>
             <p class="card-text">
-              Level: Upper-intermediate (B2)<br>
-              Purpose: Demonstrates proficiency in English for academic and professional settings.<br>
-              Focus: Reading, writing, listening, and speaking skills.<br>
+              Level: Upper-intermediate (B2)<br />
+              Purpose: Demonstrates proficiency in English for academic and
+              professional settings.<br />
+              Focus: Reading, writing, listening, and speaking skills.<br />
               Issued by: Cambridge Assessment English.
             </p>
           </div>
         </div>
       </div>
     </div>
-  </div>
-  </div>
-  <br>
-  <footer>
-    <div class="text-center text-dark p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-      <img id="email" src="img/gmail.png" />
-      <a id="pie" href="mailto:mazzeotatiana6@gmail.com">mazzeotatiana6@gmail.com</a>
-      <img id="linkedin" src="img/linkedin.png" />
-      <a id="pie" href="https://www.linkedin.com/in/tatiana-mazzeo-880595237/">Tatiana Mazzeo</a>
-    </div>
-  </footer>
+    <footer>
+      <div
+        class="text-center text-dark p-3"
+        style="background-color: rgba(0, 0, 0, 0.2)"
+      >
+        <img id="email" src="img/gmail.png" />
+        <a id="pie" href="mailto:mazzeotatiana6@gmail.com"
+          >mazzeotatiana6@gmail.com</a
+        >
+        <img id="linkedin" src="img/linkedin.png" />
+        <a id="pie" href="https://www.linkedin.com/in/tatiana-mazzeo-880595237/"
+          >Tatiana Mazzeo</a
+        >
+      </div>
+    </footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-    integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-    crossorigin="anonymous"></script>
-</body>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
