--- a/contact.html
+++ b/contact.html
@@ -54,13 +54,15 @@
               <a class="nav-link" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index.html">About me</a>
+              <a class="nav-link" href="index.html#aboutMe">About me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Work experience</a>
+              <a class="nav-link" href="index.html#workExperience"
+                >Work experience</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Education</a>
+              <a class="nav-link" href="index.html#education">Education</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact</a>
